kustomize/base/todo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-app
spec:
  to:
    kind: Service
    name: todo-app
